--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "lxml>=5.0.0",
     "tenacity>=8.2.0",
     "pyyaml>=6.0.0",
+    "openpyxl>=3.1.0",
 ]
 
 [project.optional-dependencies]
