--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "tenacity>=8.2.0",
     "pyyaml>=6.0.0",
     "openpyxl>=3.1.0",
+    "apify-client>=1.0.0",
 ]
 
 [project.optional-dependencies]
