--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "pyyaml>=6.0.0",
     "openpyxl>=3.1.0",
     "apify-client>=1.0.0",
+    "requests>=2.31.0",
 ]
 
 [project.optional-dependencies]
