--- a/data/world_context.yaml
+++ b/data/world_context.yaml
@@ -3,6 +3,41 @@
 # Source: Manual compilation + World Bank / CIA Factbook
 
 regions:
+  # US Markets
+  florida:
+    name: "Florida"
+    description: "South Florida / Miami metro construction market"
+    countries:
+      - code: US-FL
+        name: Miami Metro
+        languages: [en, es]
+        population: 6200000
+        gdp_bucket: large  # ~$400B metro GDP
+        import_reliance: medium
+        china_trade: active
+        construction_activity: very_high
+        notes: "Hurricane market. Luxury condos. International buyers. High-rise boom."
+
+      - code: US-FL-FTL
+        name: Fort Lauderdale
+        languages: [en, es]
+        population: 1900000
+        gdp_bucket: large
+        import_reliance: medium
+        china_trade: active
+        construction_activity: high
+        notes: "Yacht industry. Condo market. Hurricane impact windows required."
+
+      - code: US-FL-WPB
+        name: West Palm Beach
+        languages: [en, es]
+        population: 1500000
+        gdp_bucket: large
+        import_reliance: medium
+        china_trade: moderate
+        construction_activity: high
+        notes: "Luxury residential. Golf communities. Hurricane codes."
+
   caribbean:
     name: "Caribbean"
     description: "Island nations and territories in the Caribbean Sea"
@@ -256,21 +291,36 @@ languages:
   en:
     name: English
     keywords:
-      products: [windows, doors, "windows and doors", glazing, "aluminum windows", "impact windows"]
+      # Building materials
+      products: [windows, doors, "windows and doors", glazing, "aluminum windows", "impact windows", "bay windows", "sliding doors"]
       types: [supplier, distributor, installer, manufacturer, contractor]
-      modifiers: [hurricane, impact, uPVC, aluminum]
+      modifiers: [hurricane, impact, uPVC, aluminum, commercial, residential]
+      # Food service / hospitality
+      food_service:
+        products: ["takeout containers", "food containers", "sushi containers", "to-go containers", "disposable containers", "food packaging"]
+        types: [supplier, distributor, wholesaler, "food service supplier"]
+        modifiers: [biodegradable, compostable, plastic, paper, foam]
+        buyers: [restaurant, cafe, "chain restaurant", "fast food", "quick service", hotel, catering]
   es:
     name: Spanish
     keywords:
-      products: [ventanas, puertas, "ventanas y puertas", vidriería, "carpintería aluminio"]
+      products: [ventanas, puertas, "ventanas y puertas", vidriería, "carpintería aluminio", "ventanas corredizas"]
       types: [proveedor, distribuidor, instalador, fabricante, contratista]
       modifiers: [huracán, impacto, PVC, aluminio]
+      food_service:
+        products: ["envases para llevar", "contenedores de comida", "envases desechables", "empaques para alimentos"]
+        types: [proveedor, distribuidor, mayorista]
+        buyers: [restaurante, cafetería, hotel, catering]
   fr:
     name: French
     keywords:
-      products: [fenêtres, portes, "portes et fenêtres", vitrerie, "menuiserie aluminium"]
+      products: [fenêtres, portes, "portes et fenêtres", vitrerie, "menuiserie aluminium", "baies vitrées"]
       types: [fournisseur, distributeur, installateur, fabricant, entrepreneur]
       modifiers: [ouragan, cyclone, PVC, aluminium]
+      food_service:
+        products: ["emballages alimentaires", "barquettes", "contenants jetables", "boîtes à emporter"]
+        types: [fournisseur, distributeur, grossiste]
+        buyers: [restaurant, café, hôtel, traiteur]
   nl:
     name: Dutch
     keywords:
@@ -289,4 +339,20 @@ languages:
       products: [fenèt, pòt]
       types: [founisè]
       modifiers: []
+
+# Product categories (for query expansion)
+product_categories:
+  building_materials:
+    - windows_doors
+    - roofing
+    - flooring
+    - HVAC
+  food_service:
+    - takeout_containers
+    - kitchen_equipment
+    - disposables
+  hospitality:
+    - furniture
+    - linens
+    - amenities
 
