--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,13 +22,16 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install ruff
+          pip install ruff mypy types-requests types-PyYAML
 
       - name: Run Ruff linter
         run: ruff check src/ tests/
 
       - name: Run Ruff formatter check
         run: ruff format --check src/ tests/
+
+      - name: Run mypy type check
+        run: mypy src/shoudao/
 
   test:
     name: Test
